Fix/role update (#268)
* Fix cache policy and add less memory consuming approach

* Add more logging

* Bump version to 1.6.9